--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -572,7 +572,7 @@ the result either in Tecplot, Paraview or VisIt.
 To sum two .fld files one can use the \inltt{addFld} module of FieldConvert
 %
 \begin{lstlisting}[style=BashInputStyle]
-  FieldConvert -m addfld:fromfld=file1.fld:scale=-1:fromxml=file1.xml file2.fld \
+  FieldConvert -m addfld:fromfld=file1.fld:scale=-1 file1.xml file2.fld \
   file3.fld
 \end{lstlisting}
 %
