Add Generalized Extrapolation Method (GEM) time integration schemes

--- a/docs/developer-guide/developer-guide.bib
+++ b/docs/developer-guide/developer-guide.bib
@@ -413,7 +413,7 @@ polynomial interpolation in a simplex},
  issue = "A",
  pages = "813-829",
  year = "2014"
- }
+}
 
 @article{KirbyS06,
 author = "Robert M. Kirby and Spencer J. Sherwin",
@@ -529,6 +529,17 @@ pages = "107-125",
 year = "2011"
 }
 
+@article{Deuflhard1985,
+title={Recent progress in extrapolation methods for ordinary differential equations},
+author={Deuflhard, Peter},
+journal={SIAM review},
+volume={27},
+number={4},
+pages={505--535},
+year={1985},
+publisher={SIAM}
+}
+
 @Article{Bu06,
   author =       "J. C. Butcher",
   title =        "General linear methods",
@@ -536,7 +547,7 @@ year = "2011"
   year =         2006,
   volume =       "15",
   pages =        "157--256"
- }
+}
 
 
 %% NekPy references
