Add Spectral Deferred Correction (SDC) time-stepping scheme

--- a/docs/developer-guide/developer-guide.bib
+++ b/docs/developer-guide/developer-guide.bib
@@ -540,6 +540,33 @@ year={1985},
 publisher={SIAM}
 }
 
+@article{Dutt2000,
+title={Spectral deferred correction methods for ordinary differential equations},
+author={Dutt, Alok and Greengard, Leslie and Rokhlin, Vladimir},
+journal={BIT Numerical Mathematics},
+volume={40},
+pages={241--266},
+year={2000},
+publisher={Springer}
+}
+
+@article{Minion2003,
+title={Semi-implicit spectral deferred correction methods for ordinary differential equations},
+author={Minion, Michael L},
+year={2003}
+}
+
+@article{Ketcheson2014,
+title={A comparison of high-order explicit Runge--Kutta, extrapolation, and deferred correction methods in serial and parallel},
+author={Ketcheson, David and bin Waheed, Umair},
+journal={Communications in applied mathematics and computational science},
+volume={9},
+number={2},
+pages={175--200},
+year={2014},
+publisher={Mathematical Sciences Publishers}
+}
+
 @Article{Bu06,
   author =       "J. C. Butcher",
   title =        "General linear methods",
